feat: continue with swagger
